2005-03-28  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/psvn-hacked.el:
	(svn-status-get-specific-revision-internal): "svn cat -r BASE" should really be a local operation. I don't want files to be created in my working directories.
	(svn-ediff-exit-hook): don't emit errors at this point, since it causes buffers not to be deleted
	(svn-status-line-info->lastchangerev): attempt to fix error message after commit

	* config/ediff-config.el:
	(yh/install-ediff-changelog-keys): anonymous lambda expressions seems to be troublesome

2005-03-20  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/tempo-c++.el: new macros for c++ "for iterator"

2005-03-18  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/visual.el: use file-name-shadow-mode

2005-02-14 Yann Hodique <Yann.Hodique@lifl.fr>

	* perso/mycompletion.el:
	(gpl-header): updated gpl-header so that it fits well with doxygen

	* dotemacs-cust.el:
	moved semanticdb stuff to setq-default

	* config/lisp-config.el:
	(guile-scheme-mode): added "defface" to guile keywords (QNet2 project)
	(auto-mode-alist): open .scm files with guile-scheme

2005-01-24  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/mycode.el:
	(my-c-mode-common-hook): add M-RET to continue a comment, make Qt accesse valid
	redefine c-guess-basic-syntax to honor Qt-related changes

2005-01-23  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	(mapcond): fixed some bugs
	more documentation strings

	* dotemacs.el:
	suppressed special frame for compilation buffers
	more documentation strings
	dwim-compile utilities
	(kbd): use kbd for keybindings

	* dotemacs-cust.el:
	(custom-set-variables): more reftex settings

	* config/tabbar-config.el:
	(yh/tabbar-inhibit-function): moved here from dotemacs.el

2005-01-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/multi-region.el:
	new version

2005-01-17  Yann Hodique  <Yann.Hodique@lifl.fr>

	* config/cedet-config.el:
	disable semantic-load-turn-useful-things-on
